--- a/frontend/src/components/auth/RegisterUser.module.css
+++ b/frontend/src/components/auth/RegisterUser.module.css
@@ -1,43 +1,49 @@
-.submit{
-    background-color: white;
-    border: white;
-    border-radius: 20px;
-    width: 200px;
-    height: 30px;
-    margin-top: 30px;
-    padding: 0px;
+.submit {
+  background-color: white;
+  border: white;
+  border-radius: 20px;
+  width: 200px;
+  height: 33px;
+  margin-top: 30px;
+  padding: 0px;
 }
-.title{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: white;
+.submit:hover {
+  background-color: #0057b8;
+  transition: 0.5s;
+  transition-timing-function: ease-in-out;
 }
-input.radio{
-    width: 20px;
-    height: 20px;
+.title {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: white;
 }
-.radio{
-    text-align: left;
-    width: 350px;
-    margin: 0 auto;
+input.radio {
+  width: 20px;
+  height: 20px;
 }
-.container{
-    text-align: center;
+.radio {
+  text-align: left;
+  width: 350px;
+  margin: 0 auto;
 }
-label{
-    color: white;
-    text-align: center;
-    margin-left: 5px;
-    margin-bottom: 10px;
-    padding-right: 20px;
+.container {
+  text-align: center;
+}
+label {
+  color: white;
+  text-align: center;
+  margin-left: 5px;
+  margin-bottom: 10px;
+  padding-right: 20px;
 }
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  margin: 0;
 }
-.error{
-    color: red;
+.error {
+  color: red;
 }
-.success{
-    color:#0057B8;
+.success {
+  color: #0057b8;
 }
