--- a/frontend/src/routes/Auth.module.css
+++ b/frontend/src/routes/Auth.module.css
@@ -1,22 +1,31 @@
-body{
-    margin-top: 20vh;
-    text-align: center;
+body {
+  margin-top: 20vh;
+  text-align: center;
 }
-h1{
-    margin-bottom: 100px;
-    font-size: 50px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: bold;
-    color: white;
+h1 {
+  margin-bottom: 100px;
+  font-size: 50px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: bold;
+  color: white;
 }
-.toggle{
-    background-color: white;
-    border: white;
-    border-radius: 20px;
-    width: 200px;
-    height: 30px;
+.toggle {
+  background-color: white;
+  border: white;
+  border-radius: 20px;
+  width: 200px;
+  height: 33px;
 }
-.context{
-    transition-property: height, background-color;
-    transition-duration: 2s, 2s;
+.toggle:hover {
+  background-color: #0057b8;
+  transition: 0.5s;
+  transition-timing-function: ease-in-out;
+}
+.toggle:focus{
+    outline: 2px solid #0057B8;
+}
+.context {
+  transition-property: height, background-color;
+  transition-duration: 2s, 2s;
 }
