--- a/backend/accountdata/templates/email_verify.html
+++ b/backend/accountdata/templates/email_verify.html
@@ -3,12 +3,30 @@
     <head>
         <title>Email verified</title>
         <meta charset="utf-8">
+        <style>
+            h2{
+                color: black;
+                margin-top: 60px;
+                margin-left: 60px;
+                font-size: 30px;
+                font-weight: bold;
+            }
+            p{
+                color: black;
+                margin-top: 50px;
+                margin-left: 60px;
+                font-weight: bold;
+            }
+            body{
+                background-color: #ABCAE9;
+            }
+        </style>
     </head>
     <body>
         <h2>이메일 인증 성공!</h2>
         <p>
             축하합니다!
-            <br>이전 화면으로 돌아가려면 <a href="">여기</a>를 누르세요.
+            <br>이전 화면으로 돌아가려면 <a href="http://localhost:3000/">여기</a>를 누르세요.
         </p>
     </body>
 </html>
